--- a/restaurants/francaise.html
+++ b/restaurants/francaise.html
@@ -9,24 +9,174 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
         rel="stylesheet">
-    <title>Menu - A la francaise</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <title>Menu - À la française</title>
 </head>
 
 <body>
     <header>
-        <img src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <p>Paris, Belleville</p>
+        <a href="/index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+            <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        </a>
     </header>
+    <div class="top_image">
+        <img src="/assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du Restaurant À la française">
+    </div>
     <main>
-
+        <section class="menu">
+            <div class="container">
+                <div class="menu-title">
+                    <h1 class="menu-title-text">À la française</h1>
+                    <input type="checkbox" id="heart" class="heart-checkbox">
+                    <label for="heart" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                </div>
+                <section class="menu-card">
+                    <h2 class="type-menu">Entrées</h2>
+                    <article class="card">
+                        <input type="checkbox" id="plat1" class="checkbox">
+                        <label for="plat1" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Tartare de poulpe acidulé</strong><br>
+                                    Aux zestes d'orange
+                                    <span class="price">
+                                        <span class="card-price">25€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat2" class="checkbox">
+                        <label for="plat2" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Velouté de légumes d'antan</strong><br>
+                                    Carotte, panais, topinambour
+                                    <span class="price">
+                                        <span class="card-price">35€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat3" class="checkbox">
+                        <label for="plat3" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Soupe à l'oignon</strong><br>
+                                    Revisitée
+                                    <span class="price">
+                                        <span class="card-price">20€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <h2 class="type-menu">Plats</h2>
+                    <article class="card">
+                        <input type="checkbox" id="plat4" class="checkbox">
+                        <label for="plat4" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Coquilles Saint-Jacques</strong><br>
+                                    Accompagnées d'une purée de panais
+                                    <span class="price">
+                                        <span class="card-price">40€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat5" class="checkbox">
+                        <label for="plat5" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Magret de canard</strong><br>
+                                    Et parmentier de pommes de terre
+                                    <span class="price">
+                                        <span class="card-price">35€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat6" class="checkbox">
+                        <label for="plat6" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Pigeonneau d'Ille-et-Vilaine</strong><br>
+                                    Sur son lit de gnocchis aux légumes
+                                    <span class="price">
+                                        <span class="card-price">44€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <h2 class="type-menu">Desserts</h2>
+                    <article class="card">
+                        <input type="checkbox" id="plat7" class="checkbox">
+                        <label for="plat7" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Pétales de violettes glacés</strong><br>
+                                    Et puréee de noisettes
+                                    <span class="price">
+                                        <span class="card-price">18€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat8" class="checkbox">
+                        <label for="plat8" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Fondant au chocolat</strong><br>
+                                    Revisité
+                                    <span class="price">
+                                        <span class="card-price">22€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                    <article class="card">
+                        <input type="checkbox" id="plat9" class="checkbox">
+                        <label for="plat9" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Millefeuille croustillant</strong><br>
+                                    Myrtilles et pâte d'amande
+                                    <span class="price">
+                                        <span class="card-price">23€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                </section>
+                <div class="button">
+                    <a href="#" class="cta">Commander</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-        <img class="logo-footer" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
         <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contacts</li>
+            <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+            <li class="footer-text"><a href="#">Mentions légales</a></li>
+            <li class="footer-text"><a href="#">Contacts</a></li>
         </ul>
     </footer>
 </body>
