--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -9,26 +9,215 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Menu - La note enchantée</title>
 </head>
 
 <body>
     <header>
-        <img src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <p>Paris, Belleville</p>
+        <a href="/index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+            <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        </a>
     </header>
-    <main>
+    <div class="top_image">
+        <img src="/assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du Restaurant La note enchantée">
+    </div>
 
+    <main>
+        <section class="container">
+            <div class="menu-title">
+                <div class="menu-title__text">
+                    <h1>La note enchantée</h1>
+                    <input type="checkbox" id="heart" class="heart-checkbox">
+                    <label for="heart" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                </div>
+            </div>
+
+            <section class="menu-card">
+                <div class="title-part E">
+                    <h2 class="type-menu">Entrées</h2>
+                </div>
+
+                <section class="entries">
+                    <article class="card">
+                        <input type="checkbox" id="plat" class="checkbox">
+                        <label for="plat" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Ravioles de foie gras</strong><br>
+                                    Accompagnées de leur crème à la truffe
+                                    <span class="price">
+                                        <span class="card-price">25€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                    <article class="card">
+                        <input type="checkbox" id="plat2" class="checkbox">
+                        <label for="plat2" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Caviar osciètre</strong><br>
+                                    Sur blini à la farine de blé noir
+                                    <span class="price">
+                                        <span class="card-price">35€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                    <article class="card">
+                        <input type="checkbox" id="plat3" class="checkbox">
+                        <label for="plat3" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Homard et espuma de potiron</strong><br>
+                                    Marinés aux zestes d'orange
+                                    <span class="price">
+                                        <span class="card-price">20€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                    <article class="card">
+                        <input type="checkbox" id="plat4" class="checkbox">
+                        <label for="plat4" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Foie gras de canard cuit entier</strong><br>
+                                    Confiture de figue et pain toasté
+                                    <span class="price">
+                                        <span class="card-price">35€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+                </section>
+
+                <h2 class="type-menu">Plats</h2>
+
+                <article class="card">
+                    <input type="checkbox" id="plat5" class="checkbox">
+                    <label for="plat5" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Noix de coquilles Saint-Jacques</strong><br>
+                                Sur lit de purée de céleri-rave
+                                <span class="price">
+                                    <span class="card-price">40€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <article class="card">
+                    <input type="checkbox" id="plat6" class="checkbox">
+                    <label for="plat6" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Langoustine poêlée</strong><br>
+                                Purée de patate douce
+                                <span class="price">
+                                    <span class="card-price">35€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <article class="card">
+                    <input type="checkbox" id="plat7" class="checkbox">
+                    <label for="plat7" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Mijoté de queue de bœuf</strong><br>
+                                Et riz sauvage aux zestes de citron
+                                <span class="price">
+                                    <span class="card-price">45€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <h2 class="type-menu">Desserts</h2>
+
+                <article class="card">
+                    <input type="checkbox" id="plat8" class="checkbox">
+                    <label for="plat8" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Macaron noisette et chocolat</strong><br>
+                                Glace au caramel brun et sel de Guérande
+                                <span class="price">
+                                    <span class="card-price">18€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <article class="card">
+                    <input type="checkbox" id="plat9" class="checkbox">
+                    <label for="plat9" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Baba au rhum revisité</strong><br>
+                                Avec son coulis de citron
+                                <span class="price">
+                                    <span class="card-price">22€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <article class="card">
+                    <input type="checkbox" id="plat10" class="checkbox">
+                    <label for="plat10" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Tarte au citron meringuée</strong><br>
+                                Déstructurée
+                                <span class="price">
+                                    <span class="card-price">23€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
+
+                <div class="button">
+                    <a href="#" class="cta">
+                        <p class="cta-text">Commander</p>
+                    </a>
+                </div>
+            </section>
+        </section>
     </main>
     <footer>
-        <img class="logo-footer" src="assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contacts</li>
-        </ul>
+        <div class="first-list">
+            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <ul>
+                <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+                </li>
+                <li class="footer-text"><a href="#">Mentions légales</a></li>
+                <li class="footer-text"><a href="#">Contacts</a></li>
+            </ul>
+        </div>
     </footer>
+
 </body>
 
 </html>
