--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -16,76 +16,198 @@
 </head>
 
 <body>
+
     <header>
-        <a href="/index.html">
-            <i class="fa-solid fa-arrow-left"></i>
-            <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
-        </a>
+        <nav>
+            <a href="/index.html">
+                <i class="fa-solid fa-arrow-left"></i>
+            </a>
+        </nav>
+        <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
+
     <div class="top_image">
-        <img src="/assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="Photo du Restaurant La palette du goût">
+        <img src="/assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du Restaurant La palette du goût">
     </div>
+
     <main>
-        <section class="menu">
-            <div class="menu__title">
-                <h1 class="menu__title-text">La palette du goût</h1><i class="fa-regular fa-heart"></i>
+
+        <section class="container">
+
+            <div class="menu-title">
+                <div class="menu-title__text">
+                    <h1>La palette du goût</h1>
+                    <input type="checkbox" id="heart" class="heart-checkbox">
+                    <label for="heart" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                </div>
             </div>
-                <h2>Entrées</h2>
+
+            <section class="menu-card">
+
+                <div class="title-part E">
+                    <h2 class="type-menu">Entrées</h2>
+                </div>
+
+                <section class="entries">
+
+                    <article class="card">
+                        <input type="checkbox" id="plat" class="checkbox">
+                        <label for="plat" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Fricassée d'escargots</strong><br>
+                                    Au piment d'Espelette
+                                    <span class="price">
+                                        <span class="card-price">25€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                    <article class="card">
+                        <input type="checkbox" id="plat2" class="checkbox">
+                        <label for="plat2" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Foie gras de canard mi-cuit</strong><br> Et ses copeaux de
+                                    truffe noire
+                                    <span class="price">
+                                        <span class="card-price">35€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                    <article class="card">
+                        <input type="checkbox" id="plat3" class="checkbox">
+                        <label for="plat3" class="menu-label">
+                            <span class="contain">
+                                <p class="card-text"><strong>Œuf au plat</strong><br> Assaisonné à la truffe sur lit de
+                                    caviar
+                                    <span class="price">
+                                        <span class="card-price">20€</span>
+                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                    </span>
+                                </p>
+                            </span>
+                        </label>
+                    </article>
+
+                </section>
+
+                <h2 class="type-menu">Plats</h2>
+
                 <article class="card">
-                <p class="card__text"><strong>Fricassée d'escargots</strong><br>
-                    Au piment d'Espelette
-                    <span class="card__price">25€</span></p>
+                    <input type="checkbox" id="plat4" class="checkbox">
+                    <label for="plat4" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Filet de bœuf aux herbes</strong><br> Accompagné de sa
+                                ribambelle de légumes
+                                <span class="price">
+                                    <span class="card-price">40€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
                 </article>
 
-                <p><strong>Foie gras de canard mi-cuit</strong><br>
-                    Et ses copeaux de truffe noire
-                    35€</p>
+                <article class="card">
+                    <input type="checkbox" id="plat5" class="checkbox">
+                    <label for="plat5" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Parmentier de queue de bœuf</strong><br> À la truffe noire sur
+                                sa purée de panais
+                                <span class="price">
+                                    <span class="card-price">35€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
 
-                <p><strong>Œuf au plat</strong><br>
-                    Assaisonné à la truffe sur lit de caviar
-                    20€</p>
+                <article class="card">
+                    <input type="checkbox" id="plat6" class="checkbox">
+                    <label for="plat6" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Filet de turbot</strong><br> Aux agrumes
+                                <span class="price">
+                                    <span class="card-price">44€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
 
+                <h2 class="type-menu">Desserts</h2>
 
-                <h2>Plats</h2>
-                <p><strong>Filet de bœuf aux herbes</strong><br>
-                    Accompagné de sa ribambelle de légumes
-                    40€</p>
+                <article class="card">
+                    <input type="checkbox" id="plat7" class="checkbox">
+                    <label for="plat7" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Paris-Brest</strong><br> Revisité
+                                <span class="price">
+                                    <span class="card-price">18€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
 
-                <p><strong>Parmentier de queue de bœuf</strong><br>
-                    À la truffe noire sur sa purée de panais
-                    35€</p>
+                <article class="card">
+                    <input type="checkbox" id="plat8" class="checkbox">
+                    <label for="plat8" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Macaron au chocolat d'exception</strong><br> Et glace à la
+                                vanille de Madagascar
+                                <span class="price">
+                                    <span class="card-price">22€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
 
-                <p><strong>Filet de turbot</strong><br>
-                    Aux agrumes
-                    44€</p>
+                <article class="card">
+                    <input type="checkbox" id="plat9" class="checkbox">
+                    <label for="plat9" class="menu-label">
+                        <span class="contain">
+                            <p class="card-text"><strong>Mousse au chocolat</strong><br> Au piment d'Espelette et à la
+                                truffe noire
+                                <span class="price">
+                                    <span class="card-price">23€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
+                            </p>
+                        </span>
+                    </label>
+                </article>
 
-                <h2>Desserts</h2>
-                <p><strong>Paris-Brest</strong><br>
-                    Revisité
-                    18€</p>
+                <div class="button">
+                    <a href="#" class="cta">
+                        <p class="cta-text">Commander</p>
+                    </a>
+                </div>
 
-                <p><strong>Macaron au chocolat d'exception</strong><br>
-                    Et glace à la vanille de Madagascar
-                    22€</p>
-
-                <p><strong>Mousse au chocolat</strong><br>
-                    Au piment d'Espelette et à la truffe noire
-                    23€</p>
-                    <section>
-                <a href="#" class="cta">Commander</a>
-            </section>
-        </section>
     </main>
     <footer>
-        <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <ul>
-            <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
-            <li class="footer-text"><a href="#">Mentions légales</a></li>
-            <li class="footer-text"><a href="#">Contacts</a></li>
-        </ul>
+        <div class="first-list">
+            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <ul>
+                <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+                </li>
+                <li class="footer-text"><a href="#">Mentions légales</a></li>
+                <li class="footer-text"><a href="#">Contacts</a></li>
+            </ul>
+
     </footer>
 </body>
 
-</html>
+</html>+
